2005-09- 0.2.1-1 Samuel Abels <spam debain org>
	* Fix: Make the window scale properly.
	* The sum of calories of the current day is now shown.
2005-09-14 0.2.0-1 Samuel Abels <spam debain org>
	* Made the listview resizable, set rulers hint and made the food column
	  expand.
	* Reversed the panel order in the mainwindow (the calendar is now on the
	  left).
	* Removed the date from the listview, because it was redundant with the
	  calendar.
	* Improved terminology.
	* Made the "Weight" spin button entry box allow float numbers.
	* Fix: Improved the installer and the build no longer fails.
	* Fix: Substitute german language strings for English.
	* Correctly register application/x-shrinkingman MIME-type.
	* Automatically load the last opened file on startup.
	* Changed column order.
	* Made the "Quantity" spin button entry box allow float numbers.
	* Added a .desktop file.
	* Implemented cut & paste operations and added "Edit" menu.
	* Added navigation toolbuttons for the calendar.
	* Fix: 1-month-offset
	* Fix: Incorrect CLI error message when adding new food.
	* Fix: Update treeview when the value in the minute entry was changed.
	* Fix: Remember weight even if no food was consumed that day.
2005-09-11 0.1-1 Samuel Abels <spam debain org>
	* Initial Release